--- a/src/weather.css
+++ b/src/weather.css
@@ -9,14 +9,20 @@
 }
 .Weather row {
   margin: auto;
+  display: inline-block;
 }
+.Weather canvas {
+  margin: 10px auto;
+  display: inline-block;
+}
+
 .Weather .unit {
-  font-size: 30px;
+  color: rgb(33, 33, 33);
+  font-size: 16px;
   font-weight: 400;
-  color: #70757a;
   position: relative;
-  top: -15px;
-  margin-left: 5px;
+  line-height: 1;
+  top: -34px;
 }
 #search-bar {
   margin: 10px auto;
@@ -52,32 +58,29 @@ h4 {
 input {
   margin: 30 px;
 }
-.temperature {
-  font-size: 50px;
+.Weather .temperature {
+  font-weight: bold;
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 64px;
+  margin-left: 5px;
   font-weight: 400;
-  line-height: 60px;
-}
-.Weather img {
-  font-size: 75px;
-  height: 64px;
-  width: 64px;
-  display: inline;
-  float: left;
-  vertical-align: top;
-  width: 60px;
-  margin: 0px 12px;
+  margin-left: 15px;
+  margin-bottom: 50px;
 }
 ul {
   list-style-type: none;
   margin: 0;
-}
-span {
-  font-size: 48px;
   display: inline;
 }
-.temperatureBlock {
-  display: inline;
-}
+
 .col-3 {
   display: inline-block;
+}
+
+div {
+  display: inline;
+}
+.Weather .row mt-3 {
+  margin: auto;
 }
